--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro'
 import DarkModeToggle from './DarkModeToggle.astro'
+import { cn } from '../lib/cn'
 
 interface Props {
   class?: string
@@ -9,7 +10,7 @@ interface Props {
 const { class: className } = Astro.props
 ---
 
-<header class:list={['flex items-center', className]}>
+<header class={cn('flex items-center', className)}>
   <a
     class="unset absolute z-10 left-[50%] -top-[100rem] translate-x-[-50%] bg-white text-black px-8 py-2 focus:top-[initial]"
     href="#main"
