--- a/src/components/markdown/CoinFlip.astro
+++ b/src/components/markdown/CoinFlip.astro
@@ -16,7 +16,7 @@ const { id } = Astro.props
 
 <>
   <svg
-    class="not-prose inline-block align-[-0.15em] h-[1em] [font-variant-emoji:emoji]"
+    class="not-prose inline-block align-[-0.15em] h-[1em]"
     viewBox={id === 'unknown' ? '0 0 33 70' : '0 0 70 70'}
     fill="none"
   >
