--- a/src/components/PageMeta.astro
+++ b/src/components/PageMeta.astro
@@ -5,18 +5,33 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_URL } from '../config'
 export interface Props {
   title?: string
   description?: string
+  publishDate?: string
+  pagePath?: string
+  ogImageAbsoluteUrl?: string
+  ogImageAltText?: string
+  ogImageWidth?: number
+  ogImageHeight?: number
 }
 
-const { title, description } = Astro.props
+const {
+  title,
+  description,
+  publishDate,
+  ogImageAbsoluteUrl = `${SITE_URL}/images/og.png`,
+  ogImageAltText,
+  ogImageWidth,
+  ogImageHeight,
+} = Astro.props
 
 const { meta, og, twitter } = getPageMeta({
   title: title || SITE_TITLE,
   description: description || SITE_DESCRIPTION,
   baseUrl: SITE_URL,
-  ogImageAbsoluteUrl: `${SITE_URL}/images/og.png`,
-  ogImageAltText: 'My fancy website',
-  ogImageWidth: 1200,
-  ogImageHeight: 630,
+  publishDate,
+  ogImageAbsoluteUrl,
+  ogImageAltText,
+  ogImageWidth,
+  ogImageHeight,
 })
 ---
 
@@ -30,6 +45,11 @@ const { meta, og, twitter } = getPageMeta({
 {og.description && <meta property="og:description" content={og.description} />}
 {og.type && <meta property="og:type" content={og.type} />}
 {og.url && <meta property="og:url" content={og.url} />}
+{
+  og.publishDate && (
+    <meta property="article:published_time" content={og.publishDate} />
+  )
+}
 {og.image && <meta property="og:image" content={og.image} />}
 {og.imageAlt && <meta property="og:image:alt" content={og.imageAlt} />}
 {og.imageWidth && <meta property="og:image:width" content={og.imageWidth} />}
