--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -27,7 +27,7 @@ const { classes: classNames, tocHeadings } = Astro.props
 ---
 
 <!doctype html>
-<html class="theme-sleek" lang="en">
+<html lang="en">
   <head>
     <MetaTags />
     <Favicon />
