--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,15 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
-    Tailwind colors listed here: https://tailwindcss.com/docs/customizing-colors
-    
-    Why colors are written in rgb format (255 255 255) instead of hex (#ffffff)
-    https://tailwindcss.com/docs/customizing-colors#using-css-variables 
-*/
 @layer base {
-  /* light theme */
-  .theme-sleek {
+  :root {
     /* Tailwind orange-500 #f97316 */
     --color-primary-main: 249 115 22;
 
@@ -40,8 +33,7 @@
     --color-border-code: 255 237 213;
   }
 
-  /* dark theme */
-  .theme-sleek.dark {
+  .dark {
     /* Tailwind yellow-400 #facc15 */
     --color-primary-main: 250 204 21;
 
@@ -75,7 +67,6 @@
     font-family: theme('fontFamily.body');
     background-color: theme('colors.bg.body');
     color: theme('colors.text.body');
-    /* base font-size 1px larger for better visibility */
     font-size: 1.0625em;
     line-height: 1.75;
     /* scroll-behavior: smooth; It breaks with view transitions when scrolling */
@@ -92,15 +83,9 @@
 }
 
 @layer components {
-  /* ------ GLOBAL STYLES - START ------ */
   strong {
     font-weight: 600;
     color: theme('colors.text.bold');
-  }
-
-  mark {
-    background-color: theme('colors.bg.selection');
-    color: theme('colors.text.selection');
   }
 
   /* 
@@ -123,61 +108,11 @@
     color: theme('colors.text.link');
   }
 
-  code:not(pre code):not(.unset) {
-    background-color: theme('colors.bg.code');
-    color: theme('colors.text.code');
-    padding: 0.125rem 0.25rem;
-    border-radius: 0.25rem;
-    font-size: 0.875em;
-    font-weight: 600;
-    border: 1px solid theme('colors.border.code');
-    margin-bottom: 1.25em;
-  }
-
-  html.dark code:not(pre code) {
-    background-color: rgb(var(--color-bg-code) / 0.15);
-    border-color: rgb(var(--color-border-code) / 0.15);
-  }
-
-  ul:not(.unset):not(:where([class~='prose'] *)) {
-    padding-left: 0;
-    list-style: none;
-  }
-
-  ul:not(:where([class~='prose'] *)) > li {
-    position: relative;
-    padding-left: 1.375rem;
-  }
-
-  ul:not(.unset):not(:where([class~='prose'] *)) > li::before {
-    position: absolute;
-    left: 0;
-    content: '»';
-    color: rgb(var(--color-text-muted));
-  }
-
-  ol:not(.unset):not(:where([class~='prose'] *)) {
-    padding-left: 1.125rem;
-  }
-
-  ol:not(.unset):not(:where([class~='prose'] *)) > li::marker {
-    color: rgb(var(--color-text-muted));
-  }
-
-  ul:not(.unset):not(:where([class~='prose'] *)) > li,
-  ol:not(.unset):not(:where([class~='prose'] *)) > li {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-  }
-
   ::selection {
     background: theme('colors.bg.selection');
     color: theme('colors.text.selection');
   }
 
-  /* ------ GLOBAL STYLES - END ------ */
-
-  /* ------ REUSABLE UTILS - START ------ */
   .animated-link {
     position: relative;
     box-decoration-break: clone;
@@ -208,6 +143,4 @@
   .animated-link.show:after {
     transform: translateZ(0) scale(1);
   }
-
-  /* ------ REUSABLE UTILS - END ------ */
 }
