--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,8 @@ const { class: className } = Astro.props
       <ul class="unset flex gap-4 [&>li]:p-0">
         <li><HeaderLink href="/manual">Manual</HeaderLink></li>
         <li><HeaderLink href="/games">Games</HeaderLink></li>
-        <li><HeaderLink href="/blog">Blog</HeaderLink></li>
+        <!-- NOTE: Uncomment when adding blog entries -->
+        <!-- <li><HeaderLink href="/blog">Blog</HeaderLink></li> -->
         <li><HeaderLink href="/buy">Buy</HeaderLink></li>
       </ul>
     </section>
