--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import BuyBanner from '../components/BuyBanner.astro'
       cta="Read blog"
     /> 
     <LinkCard
-      href="/buy"
+      href="/shop"
       icon="shopping-cart"
       title="Official store"
       description="Buy the deck and support the project."
