--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ interface Props {
 const { class: className } = Astro.props
 ---
 
-<footer class={cn('text-sm leading-[1.75] mt-4', className)}>
+<footer class={cn('text-sm leading-[1.75]', className)}>
   <div>
     <span>Made with</span>
 
