--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,10 +1,14 @@
 ---
 import { cn } from '../lib/cn'
 
+type IconName = 'book' | 'play-card' | 'shopping-cart' | 'news'
 interface Props {
   href: string
+  icon?: IconName
+  text: string
+  class?: string
 }
-const { href } = Astro.props
+const { href, icon, text, class: className } = Astro.props
 
 const currentPath = new URL(Astro.request.url).pathname
 
@@ -20,5 +24,27 @@ function clean(path: string) {
 const isActive = clean(currentPath) === clean(href)
 ---
 
-<a href={href} class={cn({ show: isActive }, 'unset animated-link')}><slot /></a
+<a
+  href={href}
+  data-active={isActive}
+  aria-current={isActive ? 'page' : undefined}
+  class={cn(
+    'unset',
+    'flex flex-wrap gap-1 items-center justify-center py-4 px-0.5 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300 group',
+    {
+      'text-blue-600 border-b-2 border-blue-600 dark:text-blue-500 dark:border-blue-500 hover:border-blue-600 dark:hover:border-blue-500 hover:text-blue-600 dark:hover:text-blue-500':
+        isActive,
+    },
+    className
+  )}
+  ><i
+    class={cn(
+      `ti ti-${icon}`,
+      'text-[1.25rem]',
+      'text-gray-400 group-hover:text-gray-500 dark:text-gray-500 dark:group-hover:text-gray-300',
+      {
+        'text-blue-600 dark:text-blue-500 group-hover:text-blue-600 dark:group-hover:text-blue-500':
+          isActive,
+      }
+    )}></i><span>{text}</span></a
 >
