Header active link

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -21,7 +21,7 @@ function clean(path: string) {
     .toLocaleLowerCase()
 }
 
-const isActive = clean(currentPath) === clean(href)
+const isActive = clean(currentPath).startsWith(clean(href))
 ---
 
 <a
