--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -154,8 +154,7 @@ const sortedGames = games
                             {mapping.requiredDrawingsCount}
                           </span>
                           <span class="text-sm text-stone-600 dark:text-stone-300">
-                            drawing
-                            {mapping.requiredDrawingsCount === 1 ? '' : 's'}
+                            drawing{mapping.requiredDrawingsCount === 1 ? '' : 's'}
                           </span>
                         </span>
                       </div>
