--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -116,9 +116,11 @@ const sortedGames = games
                           <>
                             <i class="ti ti-brain" />
                             <span class="font-[450]">
-                              {game.complexity}
-                              <span class="text-sm text-stone-400 dark:text-stone-400">
-                                /5
+                              <span class="inline-flex items-baseline">
+                                <span>{game.complexity}</span>
+                                <span class="text-sm text-stone-400 dark:text-stone-400">
+                                  /5
+                                </span>
                               </span>
                               <span class="hidden @[80px]:inline-block text-sm text-stone-600 dark:text-stone-300">
                                 Complexity
@@ -156,8 +158,9 @@ const sortedGames = games
                             {mapping.requiredDrawingsCount}
                           </span>
                           <span class="text-sm text-stone-600 dark:text-stone-300">
-                            drawing
-                            {mapping.requiredDrawingsCount === 1 ? '' : 's'}
+                            {`drawing${
+                              mapping.requiredDrawingsCount === 1 ? '' : 's'
+                            }`}
                           </span>
                         </span>
                       </div>
